# dafne

./: CMakeLists.txt  README.md
cfg/: kpipi0_cleo.cfg  kskk_isobar_babar.cfg  kspipi_fvector_babar.cfg  kspipi_isobar_babar.cfg
cmake/: AddAnalysisTarget.cmake  FindCudaArch.cmake  FindROOT.cmake  FindTBB.cmake  FindTCLAP.cmake
doc/: README.md  REAME.md  details_of_the_decay_amplitude.html  details_of_the_decay_amplitude.md  installation_and_work_flow.html  installation_and_work_flow.md
include/: dalitz-fit.inl  fit-KSpipi-time-dependent-time-resolution-with-background.inl  fit-KSpipi-time-dependent-time-resolution.inl  fit-KSpipi-time-dependent.inl  fit-KSpipi-time-independent-with-background.inl  fit-KSpipi-time-independent.inl  generate-KSpipi-time-dependent-double-gaussian-time-resolution.inl  generate-KSpipi-time-dependent-time-resolution-with-background.inl  generate-KSpipi-time-dependent-time-resolution.inl  generate-KSpipi-time-dependent.inl  generate-KSpipi-time-independent-with-background.inl  generate-KSpipi-time-independent.inl  generate-Kpipi0.inl  time-dependent-dalitz-fit.inl
include/models/: D0ToKPiPi0RS_CLEO.h  D0ToKsKK_ISOBAR_BABAR.h  D0ToKsPiPi_FVECTOR_BABAR.h  D0ToKsPiPi_ISOBAR_BABAR.h
include/physics/: Amplitude.h  Amplitudes.h  BaseAmplitude.h  BreitWignerPropagator.h  DoubleGaussian.h  FlattePropagator.h  Fvector.h  GLassPropagator.h  GounarisSakuraiPropagator.h  LHCb_cerf.h  LassPropagator.h  Mixing.h  NonResonant.h  PDG.h  Rate.h  Resolution.h  Resonance.h  RooMathM.h  ThreeBodyPhaseSpace.h  Utils.h
include/tools/: ArbitraryBinningHistogram2D.h  ArbitraryBinningHistogram2DFunctor.h  Arguments.h  ConfigFile.h  DalitzPlotter.h  DalitzPlotterWithTime.h  DalitzPlotterWithTimeAndTimeError.h  FunctorTools.h  MinuitTools.h  Plotter.h  Printer.h
scripts/: simulation_with_samples_input.C
src/: dalitz-fit.cpp  fit-KSpipi-time-dependent-time-resolution-with-background.cpp  fit-KSpipi-time-dependent-time-resolution.cpp  fit-KSpipi-time-dependent.cpp  fit-KSpipi-time-independent-with-background.cpp  fit-KSpipi-time-independent.cu  generate-KSpipi-time-dependent-double-gaussian-time-resolution.cpp  generate-KSpipi-time-dependent-time-resolution-with-background.cpp  generate-KSpipi-time-dependent-time-resolution.cpp  generate-KSpipi-time-dependent.cpp  generate-KSpipi-time-independent-with-background.cpp  generate-KSpipi-time-independent.cpp  generate-Kpipi0.cu  time-dependent-dalitz-fit.cpp
